# modwire-siren

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  Makefile  README.md  _AGENTS.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  human-approval.yml  issue-metadata.yml  publish-pypi.yml  release.yml
.modwire/: INDEX.md  architecture.yaml
.modwire/docs/: ARCHITECTURE.md  MODWIRE.md  RULES.md  TESTING.md  WORKFLOW.md
docs/siren-ui-profile/: README.md  python-api.md  review-checklist.md
docs/siren-ui-profile/examples/: README.md
docs/siren-ui-profile/schema/: profile.schema.json
examples/: build_document.py  profile.py
scripts/: check_service_conventions.py  generate_docs.py  siren_spec.py  verify_release.py
src/modwire_siren/: __init__.py  _version.py  builder.py  composition.py  contracts.py  error.py  extras.py  facade.py  serialization.py  service.py  standards.py  wiring.py
src/modwire_siren/api/: __init__.py  siren.py
tests/: fastapi_fixture.py  openapi_documents.py  test_client.py  test_collection.py  test_components.py  test_conformance.py  test_django_integration.py  test_document.py  test_errors.py  test_facade.py  test_fields.py  test_hardening.py  test_ninja_extra.py  test_openapi.py  test_openapi_discovery.py  test_openapi_responses.py  test_pipeline.py  test_policy_hooks.py  test_projection.py  test_queries.py  test_repository.py  test_resource_ergonomics.py  test_root.py  test_routes.py  test_schema.py  test_siren_public_api.py  test_siren_schema_provenance.py  test_siren_spec.py  test_ui_profile.py  test_ui_profile_specification.py
tests/fixtures/: wheel_consumer.py
(+307 files in other folders)
